--- a/sling-shot-to-unlock/package.json
+++ b/sling-shot-to-unlock/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.0",
+    "jquery-ui-bundle": "^1.12.1-migrate",
     "jquery-ui-dist": "^1.12.1",
     "react": "^17.0.2",
     "react-anime": "^4.1.1",
+    "react-animejs": "^0.5.6",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
